[tool.poetry]
name = "PyMoe"
version = "2.2"
description = "This is Pymoe. The only python library you'll need if you need information on Anime, Manga, Light Novels, or Visual Novels."
authors = ["Charles Click <CharlesClick@vertinext.com>"]
readme = "README.md"
packages = [{include="pymoe"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "*"
bs4 = "*"
ujson = "*"
mkdocs = "1.5.*"
mkdocs-material = "9.5.*"
mkdocstrings = "0.24.*"
mkdocs-git-revision-date-localized-plugin = "1.2.*"
mkdocs-git-committers-plugin-2 = "2.2.*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
